--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "default_icon": {
       "32": "icons/overleaf-ext-logo.png"
     },
-    "default_popup": "ui-dist/index.html",
+    "default_popup": "ui/dist/popup.html",
     "default_title": "Overleaf"
   },
   "permissions": [
