--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && rm -r ../ui-dist && mv dist ../ui-dist",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
