--- a/ui/jsconfig.json
+++ b/ui/jsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
     "moduleResolution": "Node",
     "target": "ESNext",
     "module": "ESNext",
