--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,11 @@
         "https://*.overleaf.com/*"
       ],
       "js": [
-        "inject-get-link.js"
+        "get-link.js"
       ]
     }
   ],
-  "web_accessible_resources": [ "get-link.js" ],
+  "web_accessible_resources": [ "snatch-csrf-token.js" ],
   "permissions": [
     "tabs",
     "storage",
