--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.34",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "svelte": "^3.52.0",
+    "unplugin-icons": "^0.14.13",
     "vite": "^3.2.3"
   },
   "dependencies": {
