--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.34",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@types/chrome": "^0.0.200",
     "svelte": "^3.52.0",
     "unplugin-icons": "^0.14.13",
     "vite": "^3.2.3"
