--- a/ui/package.json
+++ b/ui/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write --plugin-search-dir=. './**/*.{js,svelte}'"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.34",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@types/chrome": "^0.0.200",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.8.0",
     "svelte": "^3.52.0",
     "unplugin-icons": "^0.14.13",
     "vite": "^3.2.3"
